--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
 
 
     // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    // https://firebase.google.com/docs/android/setup#available-librari
+
+    implementation 'com.google.firebase:firebase-database'
+
 }
